--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">ChocoTest</string>
+<!--    <string name="app_name">ChocoTest</string>-->
+
+    <string name="app_formal_name">巧克戲劇版官方APP</string>
+    <string name="app_test_name">巧克戲劇版測試APP</string>
 </resources>
