完成 戲劇列表基本畫面

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
 
     <string name="app_formal_name">巧克戲劇版官方APP</string>
     <string name="app_test_name">巧克戲劇版測試APP</string>
+
+    <!--MainActivity  -->
+    <string name="hint_search_drama">搜尋劇名</string>
 </resources>
