--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,14 @@
     <string name="app_formal_name">巧克戲劇版官方APP</string>
     <string name="app_test_name">巧克戲劇版測試APP</string>
 
+
+
+    <!--Dialog-->
+    <string name="snack_bar_confirm">確定</string>
+    <string name="snack_bar_api_error_title">資料撈取失敗</string>
+
     <!--MainActivity  -->
     <string name="hint_search_drama">搜尋劇名</string>
+
+
 </resources>
